create github pages

--- a/CV.html
+++ b/CV.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="header1 cid-rYTYFHu5cB" id="header16-1i">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="header1 cid-rYTYFHu5cB" id="header16-1i">
 
     
 
@@ -151,7 +151,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="https://rehahome.cz/">
-                        <img src="assets/images/symbol.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/rehahome-house-big.png" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
