--- a/fyzioterapie.html
+++ b/fyzioterapie.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="cid-rYIL75ZViJ" id="header2-16">
+<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="cid-rYIL75ZViJ" id="header2-16">
 
     
 
@@ -209,7 +209,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="https://rehahome.cz/">
-                        <img src="assets/images/symbol.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/rehahome-house-big.png" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
