--- a/gdpr.html
+++ b/gdpr.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="header1 cid-rYU9jmQ4Ld" id="header16-1r">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="header1 cid-rYU9jmQ4Ld" id="header16-1r">
 
     
 
@@ -146,7 +146,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="https://rehahome.cz/">
-                        <img src="assets/images/symbol.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/rehahome-house-big.png" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
