--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="header1 cid-rYTSFbyskH mbr-parallax-background" id="header1-1f">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="header1 cid-rYTSFbyskH mbr-parallax-background" id="header1-1f">
 
     
 
@@ -140,7 +140,7 @@ v pohodlí Vašeho domova&nbsp;<br></p>
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="https://rehahome.cz/">
-                        <img src="assets/images/symbol.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/rehahome-house-big.png" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
