--- a/omne.html
+++ b/omne.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy web creator</a></section><section class="header1 cid-rYTZivUZuZ" id="header16-1j">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio website templates</a></section><section class="header1 cid-rYTZivUZuZ" id="header16-1j">
 
     
 
@@ -137,7 +137,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="https://rehahome.cz/">
-                        <img src="assets/images/symbol.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/rehahome-house-big.png" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
