--- a/reference.html
+++ b/reference.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="header1 cid-rYYq6Ird2U" id="header16-2p">
+<section class="engine"><a href="https://mobirise.info/g">how to build a website for free</a></section><section class="header1 cid-rYYq6Ird2U" id="header16-2p">
 
     
 
@@ -153,7 +153,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="https://rehahome.cz/">
-                        <img src="assets/images/symbol.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/rehahome-house-big.png" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
